[gd_scene load_steps=2 format=3 uid="uid://c5y7tjqwrf8k0"]

[ext_resource type="Script" path="res://scripts/ui/save_slot_selection.gd" id="1_save_slot"]

[node name="SaveSlotSelection" type="CanvasLayer"]
script = ExtResource("1_save_slot")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.25098, 1)
theme_override_font_sizes/font_size = 32
text = "SELECT SAVE SLOT"
horizontal_alignment = 1

[node name="SlotContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Slot1Container" type="HBoxContainer" parent="Panel/VBoxContainer/SlotContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Slot1Button" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot1Container"]
custom_minimum_size = Vector2(440, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "SLOT 1
[EMPTY]"

[node name="EditButton1" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot1Container"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚úèÔ∏è"
visible = false

[node name="DeleteButton1" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot1Container"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "üóëÔ∏è"
visible = false

[node name="Slot2Container" type="HBoxContainer" parent="Panel/VBoxContainer/SlotContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Slot2Button" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot2Container"]
custom_minimum_size = Vector2(440, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "SLOT 2
[EMPTY]"

[node name="EditButton2" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot2Container"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚úèÔ∏è"
visible = false

[node name="DeleteButton2" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot2Container"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "üóëÔ∏è"
visible = false

[node name="Slot3Container" type="HBoxContainer" parent="Panel/VBoxContainer/SlotContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Slot3Button" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot3Container"]
custom_minimum_size = Vector2(440, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "SLOT 3
[EMPTY]"

[node name="EditButton3" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot3Container"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚úèÔ∏è"
visible = false

[node name="DeleteButton3" type="Button" parent="Panel/VBoxContainer/SlotContainer/Slot3Container"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "üóëÔ∏è"
visible = false

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(560, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "BACK"
